tests/IntrosWhnfPanic.lean.expected
tests/IntrosWhnfPanic.lean:15:17: error: expected term
